--- a/Assignments/Assignment Grid RWD/T83_SpaceX.html
+++ b/Assignments/Assignment Grid RWD/T83_SpaceX.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic-83</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./T83_SpaceX_Template_styles.css">
 </head>
 <body>
     <div class="wrapper row1">
 <!-- =================================================== Header =================================================== -->
         <header>
             <div id="title">
-                <h1><a href="#"> <span style="color:#bb1b3b">Dead Pool</a></h1>
-                <h2>Maximum Effort</h2>
+                <h1><a href="#"> <span>SpaceX</a></h1>
+                <h2><span>Aerospace Company</span></h2>
             </div>
             <form action="#" >
                 <fieldset>
@@ -23,11 +23,11 @@
             </form>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#section2">Cast</a></li>
-                    <li><a href="#movieplot">Movie Plot</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li class=".last"><a href="#main_footer">Contact us</a></li>
+                    <li><a href="#home">Falcon</a></li>
+                    <li><a href="#section2">Dragon</a></li>
+                    <li><a href="#movieplot">Starship</a></li>
+                    <li><a href="#about">RideShare</a></li>
+                    <li class=".last"><a href="#main_footer">Human Spacelight</a></li>
                 </ul>
             </nav>
         </header>
@@ -38,7 +38,7 @@
     <div class="container">
         <!-- ==================== Section 1 ==================== -->
         <section class="section1">
-            <img src="./images/demo/deadpool cover image.png" alt="deadpool 960x280.">
+            <img src="./images/spaceX.jpg" alt="deadpool 960x280.">
         </section>
 
         <!-- ========== Home Page ============== -->
@@ -48,43 +48,43 @@
             <section class="section2">
                 <article id="article1" class="article_row1">
                     <figure>
-                        <img src="./images/demo/32x32image1" alt="Ryan Ronalds">
+                        <img src="./images/elon.jpg" alt="Ryan Ronalds">
                     </figure>
-                    <strong>Ryan Ronalds</strong>
+                    <strong>Elon Musk</strong>
                     <p>Ryan Rodney Reynolds (born October 23, 1976) is a Canadian actor and film producer.</p>
-                    <div class="readmore">
+                    <p class="readmore">
                         <a href="https://en.wikipedia.org/wiki/Ryan_Reynolds" target="_blank">Read More »</a>
-                    </div>
+                    </p>
                 </article>
                 <article id="article2" class="article_row1">
                     <figure>
-                        <img src="./images/demo/32x32image2" alt="Morena Baccarin">
+                        <img src="./images/hari 1.jpg" alt="Morena Baccarin">
                     </figure>
-                    <strong>Morena Baccarin</strong>
+                    <strong>Punem harish</strong>
                     <p>Morena Silva de Vaz Setta Baccarin ( born June 2, 1979) is a Brazilian actress.</p>
-                    <div class="readmore">
+                    <p class="readmore">
                         <a href="https://en.wikipedia.org/wiki/Morena_Baccarin"  target="_blank">Read More »</a>
-                    </div>
+                    </p>
                 </article>
                 <article id="article3" class="article_row1">
                     <figure>
-                        <img src="./images/demo/32x32image3" alt="32x32">
+                        <img src="./images/busi1.jpg" alt="32x32">
                     </figure>
                     <strong>Ed Skrein</strong>
                     <p>Edward George Skrein (born 29 March 1983) is an English actor, film director, screenwriter and rapper.</p>
-                    <div class="readmore">
+                    <p class="readmore">
                         <a href="https://en.wikipedia.org/wiki/Ed_Skrein"  target="_blank">Read More »</a>
-                    </div>
+                    </p>
                 </article>
                 <article id="article4" class="article_row1 last">
                     <figure>
-                        <img src="./images/demo/32x32image4" alt="32x32">
+                        <img src="./images/busi2.jpg" alt="32x32">
                     </figure>
                     <strong>Karan Soni</strong>
                     <p>Karan Soni (born January 8, 1989) is an Indian-American actor. Often appearing in comedic roles.</p>
-                    <div class="readmore">
+                    <p class="readmore">
                         <a href="https://en.wikipedia.org/wiki/Karan_Soni"  target="_blank">Read More »</a>
-                    </div>
+                    </p>
                 </article>
             </section>
 
@@ -92,10 +92,10 @@
             <section class="section3">
                 <article class="movieplot">
                     <h2>
-                       Movie Plot
+                       Aero Space Company
                     </h2>
-                    <p>This is the origin story of former Special Forces operative turned mercenary Wade Wilson, who after being subjected to a rogue experiment that leaves him with accelerated healing powers, adopts the alter ego Deadpool.</p> 
-                    <p>Armed with his new abilities and a dark, twisted sense of humor, Deadpool hunts down the man who nearly destroyed his life.</p>
+                    <p>TSpaceX designs, manufactures and launches advanced rockets and spacecraft. The company was founded in 2002 to revolutionize space technology, ...</p> 
+                    <p>SpaceX's achievements include the first privately funded liquid-propellant rocket to reach orbit (Falcon 1 in 2008), the first private company to successfully launch <a href="https://www.os-templates.com/">free website templates</p>
                     
                     <p class="readmore">
                         <a href="https://www.imdb.com/title/tt1431045/plotsummary"  target="_blank">Read More »</a>
@@ -103,9 +103,9 @@
                 </article>
                 <aside class="about">
                     <h2>
-                        About
+                        Telsa
                     </h2>
-                    <p>Deadpool is a 2016 American superhero film based on the Marvel Comics character of the same name.</p>
+                    <p>Elon Musk had the one of the another company name is Tesla is accelerating the world's transition to sustainable energy with electric cars, solar and integrated renewable energy solutions for home.</p>
                     <p>Directed by Tim Miller it stars Ryan Reynolds, Morena Baccarin</p>
                     
                     <p class="readmore">
@@ -120,8 +120,8 @@
 <!-- =======================================================Footer==================================================== -->
 <div class="wrapper row3">
     <footer >
-        <p>Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
-        <p>Template cloned from OS-Templates by Ervin </p>
+        <p id="left_footer">Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
+        <p id="right_footer">Developed  by Harish </p>
     </footer>
 </div>
 <!-- ================================================================================================================= -->
