--- a/Assignments/Assignment Grid RWD/T83_SpaceX.html
+++ b/Assignments/Assignment Grid RWD/T83_SpaceX.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic-83</title>
-    <link rel="stylesheet" href="./T83_SpaceX_Template_styles.css">
+    <link rel="stylesheet" href="./T83_SpaceX_style.css">
 </head>
 <body>
     <div class="wrapper row1">
@@ -38,7 +38,7 @@
     <div class="container">
         <!-- ==================== Section 1 ==================== -->
         <section class="section1">
-            <img src="./images/spaceX.jpg" alt="deadpool 960x280.">
+            <img src="./images/spaceX.jpg" alt=" 960x280.">
         </section>
 
         <!-- ========== Home Page ============== -->
