--- a/Assignments/Assignment Grid RWD/T85_Tour_template.html
+++ b/Assignments/Assignment Grid RWD/T85_Tour_template.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic-85</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./T85_Tour_templatestyle.css">
 
 </head>
 
@@ -16,16 +16,16 @@
     <div class="wrapper row1">
         <header>
             <div id="title">
-                <h1><a href="#">Indian Premier League</a></h1>
+                <h1><a href="#">Tour My India</a></h1>
                 <h2>Twenty20 cricket league</h2>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#title">Home</a></li>
-                    <li><a href="#section1">About</a></li>
-                    <li><a href="#section2">Images</a></li>
-                    <li><a href="#section4">Teams</a></li>
-                    <li class="last"><a href="#main_footer">Footer</a></li>
+                    <li><a href="#title">Destination</a></li>
+                    <li><a href="#section1">Package</a></li>
+                    <li><a href="#section2">Adventure</a></li>
+                    <li><a href="#section4">Trekking</a></li>
+                    <li class="last"><a href="#main_footer">Weekend</a></li>
                 </ul>
             </nav>
         </header>
@@ -35,9 +35,8 @@
         <div class="container">
             <!-- ========== Section 1 ============== -->
             <section class="section1">
-                <p>The Indian Premier League (IPL) is a professional Twenty20 cricket league, contested by eight teams
-                    based out of eight Indian cities. founded by the Board of Control for Cricket in India (BCCI) in
-                    2007. It is usually held between March and May of every year.</p>
+              <p>Home to some of the surreal hill stations, India is a travel destination you have to visit. Adorned with tranquil ambience, verdant greenery, sprawling desert, beautiful valleys, and dreamy lakes, the hill stations in India make for the best holiday destinations. Undoubtedly, your hill station trip in India will be an experience that shall remain etched in your mind for the rest of your life. </p>
+
             </section>
             <!-- ========== Home Page ============== -->
             <div class="homepage">
@@ -48,21 +47,21 @@
                         <figure>
                             <ul>
                                 <li>
-                                    <img src="./images/demo/215x150(4)" alt="215x150">
+                                    <img src="images/taj.jpg" alt="215x150">
                                 </li>
                                 <li>
-                                    <img src="./images/demo/215x150(2)" alt="215x150">
+                                    <img src="images/kerala.jpg" alt="215x150">
                                 </li>
                                 <li>
-                                    <img src="./images/demo/215x150(3)" alt="215x150">
+                                    <img src="images/goa.jpg" alt="215x150">
                                 </li>
                                 <li id="last">
-                                    <img src="./images/demo/215x150(1)" alt="215x150">
+                                    <img src="images/manali.jpg" alt="215x150">
                                 </li>
                             </ul>
                         </figure>
                         <figcaption>
-                            <p><a href="https://www.iplt20.com/" target="_blank">View all our recent works for ipl here
+                            <p><a href="https://www.iplt20.com/" target="_blank">View all our recent places
                                     »</a></p>
                         </figcaption>
                     </article>
@@ -72,93 +71,98 @@
                 <section class="section3">
                     <article id="article1" class="article_row1">
                         <figure>
-                            <img src="./images/demo/32x32(1)" alt="csk">
+                            <img src="images/charan.jpg" alt="csk">
                         </figure>
-                        <strong>CSK</strong>
-                        <p>The Chennai Super Kings (CSK) is a franchise cricket team based in Chennai, Tamil Nadu.
-                            Founded in 2008</p>
-                       <div class="readmore">
+                        <strong>Ram Charan</strong>
+                        <p>I am Travelled Goa. Provided the best accomodation, food and best hotels. I hope, i travel many places in this Company. </p>
+                        <p class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Chennai_Super_Kings" target="_blank">Read More »</a>
-                       </div>
+                        </p>
                     </article>
                     <article id="article2" class="article_row1">
                         <figure>
-                            <img src="./images/demo/32x32(2)" alt="mi">
+                            <img src="images/pk.jpg" alt="mi">
                         </figure>
-                        <strong>MI</strong>
-                        <p>The Mumbai Indians (MI) are a franchise cricket team based in Mumbai, Maharashtra. Founded in
-                            2008</p>
-                       <div class="readmore">
+                        <strong>Pawan kalyan</strong>
+                        <p>I travelled Kerala . Best Place to enjoy Nature. Best Travellers company. provided Best food, hotels ,accomodation and good time management.</p>
+                        <p class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Mumbai_Indians" target="_blank">Read More »</a>
-                       </div>
+                        </p>
                     </article>
                     <article id="article3" class="article_row1">
                         <figure>
-                            <img src="./images/demo/32x32(3)" alt="rcb">
+                            <img src="images/kajal.jpg" alt="rcb">
                         </figure>
-                        <strong>RCB</strong>
-                        <p>The Royal Challengers Bangalore (RCB) are a franchise cricket team based in Bangalore,
-                            Karnataka. It was founded in 2008 </p>
-                       <div class="readmore">
+                        <strong>Kajal</strong>
+                        <p>I travelled Taj Mahal. Best place. Best Travellers company. provided Best food, hotels ,accomodation and good time management.</p>
+
+                        <p class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Royal_Challengers_Bangalore" target="_blank">Read
                                 More »</a>
-                            </div>
+                        </p>
                     </article>
                     <article id="article4" class="article_row1 last">
                         <figure>
-                            <img src="./images/demo/32x32(4)" alt="32x32">
+                            <img src="images/vdk.jpg" alt="32x32">
                         </figure>
-                        <strong>SRH</strong>
-                        <p>The Sunrisers Hyderabad (SRH) are a franchise cricket team based in Hyderabad, Telangana,
-                            India. Founded in 2012 </p>
-                       <div class="readmore">
+                        <strong>Vijay Devarakonda</strong>
+                        <p>I Love travelling. Im almost travelled all places in India. I enjoyed a lot in this trip.</p>
+
+                        <p class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Sunrisers_Hyderabad" target="_blank">Read More »</a>
-                       </div>
+                        </p>
                     </article>
+
+                    <!-- ========================spacer================================ -->
+                    <div class="spacer">
+
+                    </div>
+                    <!-- ======================================================== -->
+
                     <article id="article5" class="article_row2">
                         <figure>
-                            <img src="./images/demo/32x32(5)" alt="32x32">
+                            <img src="images/mohan.jpg" alt="32x32">
                         </figure>
-                        <strong>DC</strong>
-                        <p>The Delhi Capitals (DC) are a franchise cricket team based out of Delhi in the Indian Premier
-                            League (IPL). Founded in 2008 .</p>
-                       <div class="readmore">
+                        <strong>Mohan Babu</strong>
+                        <p>Great travellers. all employers are worked well. Treat us like their bosses. No Worries Mast Enjoyment.</p>
+
+                        <p class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Delhi_Capitals" target="_blank">Read More »</a>
-                       </div>
+                        </p>
                     </article>
                     <article id="article6" class="article_row1">
                         <figure>
-                            <img src="./images/demo/32x32(6)" alt="32x32">
+                            <img src="images/ntr.jpg" alt="32x32">
                         </figure>
-                        <strong>PBKS</strong>
-                        <p>The Punjab Kings (PBKS) are a franchise cricket team based in Mohali, Punjab India.
-                            Established in 2008.</p>
-                       <div class="readmore">
+                        <strong>NTR</strong>
+                        <p>I Love Travelling. Best place. Best Travellers company. provided Best food, hotels ,accomodation and good time management.</p>
+
+                        <p class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Punjab_Kings" target="_blank">Read More »</a>
-                       </div>
+                        </p>
                     </article>
                     <article id="article7" class="article_row1">
                         <figure>
-                            <img src="./images/demo/32x32(7)" alt="32x32">
+                            <img src="images/Ram.jpg" alt="32x32">
                         </figure>
-                        <strong>RR</strong>
-                        <p>The Rajasthan Royals (RR) are a franchise cricket team based in Jaipur, Rajasthan. Founded in
-                            2008</p>
-                       <div class="readmore">
+                        <strong>Ram Pothineni</strong>
+                        <p>Enjoyed a lot in this trip. Best travellers. I always prefers Tour My India.</p>
+
+                        <p class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Rajasthan_Royals" target="_blank">Read More »</a>
-                       </div>
+                        </p>
                     </article>
                     <article id="article8" class="article_row1 last">
                         <figure>
-                            <img src="./images/demo/32x32(8)" alt="32x32">
+                            <img src="images/mahesh.jpg" alt="32x32">
                         </figure>
-                        <strong>KKR</strong>
-                        <p>The Kolkata Knight Riders (KKR) are a franchise cricket team representing the city of Kolkata
-                            in the Indian Premier League.</p>
-                       <div class="readmore">
+                        <strong>Mahesh babu</strong>
+                        <p>I travelled Kerala . Best Place to enjoy Nature. Best Travellers company. provided Best food, hotels ,accomodation and good time management.</p>
+
+                        <p class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Kolkata_Knight_Riders" target="_blank">Read More
                                 »</a>
-                            </div>
+                        </p>
                     </article>
                 </section>
             </div>
@@ -168,8 +172,8 @@
         <!-- =======================================================footer================================================ -->
         <div class="wrapper row3">
             <footer>
-                <p >Copyright © 2021 - All Rights Reserved - IPL</p>
-                <p >Template cloned from OS-Templates by Ervin </p>
+                <p id="left_footer">Copyright © 2021 - All Rights Reserved - Tour</p>
+                <p id="right_footer">Templates are devloped by Hari </p>
             </footer>
         </div>
 
