completed all the grid templates

--- a/Assignments/Assignment Grid RWD/T84_Movie_Poster_template.html
+++ b/Assignments/Assignment Grid RWD/T84_Movie_Poster_template.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Dada</title>
-    <link rel="stylesheet" href="./T84_Movie_Poster_Style.css">
+    <link rel="stylesheet" href="./T84_movie_posterstyles.css">
   </head>
   <body>
     <!-- ============================ Header with search box on right and navigator at bottom ============================ -->
@@ -68,7 +68,7 @@
               </figure>
               <strong>Liger</strong>
               <p>
-              Liger untitled movie is a romantic action entertainer directed by Puri Jagan and jointly produced by Charmme Kaur and Puri Connects banner.
+              Liger untitled movie is a romantic action entertainer directed and jointly produced by Charmme Kaur and Puri Connects banner.
               </p>
               <p class="readmore">
                 <a
@@ -84,7 +84,7 @@
               </figure>
               <strong>Maha Samudram </strong>
               <p>
-                Maha Samudram is a romantic action entertainer movie directed by RX 100 fame Ajay Bhupathi. The movie casts Sharwanand, Siddharth, Aditi Rao Hydari and Anu Emmanuel are in the lead roles along with Jagapathi Babu, Rao Ramesh, KGF Ramchandra Raju and many others are seen in supporting roles.
+                Maha Samudram is a romantic action entertainer RX 100 fame Ajay Bhupathi. The movie casts Sharwanand, Siddharth, Aditi Rao Hydari and Anu Emmanuel are in the lead roles along with Jagapathi Babu, Rao Ramesh, KGF Ramchandra Raju and many others are seen in supporting roles.
               </p>
               <p class="readmore">
                 <a
