--- a/Assignments/Assignment Grid RWD/T85_Tour_template.html
+++ b/Assignments/Assignment Grid RWD/T85_Tour_template.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic-85</title>
-    <link rel="stylesheet" href="./T85_Tour_templatestyle.css">
+    <link rel="stylesheet" href="./T85_Tour_template_styles.css">
 
 </head>
 
@@ -17,7 +17,7 @@
         <header>
             <div id="title">
                 <h1><a href="#">Tour My India</a></h1>
-                <h2>Twenty20 cricket league</h2>
+                <h2>Travel with Happiness</h2>
             </div>
             <nav>
                 <ul>
@@ -114,9 +114,7 @@
                     </article>
 
                     <!-- ========================spacer================================ -->
-                    <div class="spacer">
 
-                    </div>
                     <!-- ======================================================== -->
 
                     <article id="article5" class="article_row2">
@@ -160,8 +158,7 @@
                         <p>I travelled Kerala . Best Place to enjoy Nature. Best Travellers company. provided Best food, hotels ,accomodation and good time management.</p>
 
                         <p class="readmore">
-                            <a href="https://en.wikipedia.org/wiki/Kolkata_Knight_Riders" target="_blank">Read More
-                                »</a>
+                            <a href="https://en.wikipedia.org/wiki/Kolkata_Knight_Riders" target="_blank">Read More</a>
                         </p>
                     </article>
                 </section>
