--- a/Assignments/Assignment Grid RWD/T87_FlipCart_Template.html
+++ b/Assignments/Assignment Grid RWD/T87_FlipCart_Template.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic-87</title>
-    <link rel="stylesheet" href="./T87_Flipcart_Style.css">
+    <link rel="stylesheet" href="./T87_FlipCart_Template_styles.css">
 
 </head>
 
