--- a/Assignments/Assignment Grid RWD/T86_10000_coders.html
+++ b/Assignments/Assignment Grid RWD/T86_10000_coders.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic-86</title>
-    <link rel="stylesheet" href="./T86_10000_coders_Style.css">
+    <link rel="stylesheet" href="./T86_10000Coders_template_styles.css">
     
 </head>
 <body>
