--- a/Assignments/Assignment Grid RWD/T88_Developer_Template.html
+++ b/Assignments/Assignment Grid RWD/T88_Developer_Template.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic-88</title>
-    <link rel="stylesheet" href="./T88_Developer_style.css">
+    <link rel="stylesheet" href="./T88_Developer_Template_styles.css">
     
 </head>
 <body>
