--- a/JAVASCRIPT/Arrays/simple array.html
+++ b/JAVASCRIPT/Arrays/simple array.html
@@ -23,9 +23,12 @@
         }
         function display()
         {
+            states.splice(1,0,"Ervin");
+            console.log(states)
             document.getElementById("display").innerHTML = result;
         }
 
+        
     </script>
 </body>
 </html>
