--- a/grid/84/Template4.html
+++ b/grid/84/Template4.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="wrapper row1">
-        <header id="header" class="clear0">
+        <header id="header" class="clear">
             <div id="hgroup">
                 <h1>
                     <a href="#">Basic 84</a>
@@ -178,76 +178,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-@media only screen and (min-width: 0px) and (max-width: 450px){
-*{
-padding: 0;
-margin: 0;
-box-sizing: border-box;
-}
-header{
-width: 100%;
-display: flex;
-}
-header nav{
-width: 100%;
-}
-header nav ul{
-display: flex;
-flex-direction: column;
-}
-header nav ul li{
-width: 100%;
-background: red;
-padding: 10px;
-border-bottom: 2px solid white;
-}
-header nav ul li a{
-background-color: red;
-color: black;
-font-weight: bold;
-}
-#container{
-width: 100%;
-flex-direction: column;
-}
-#container #slider img{
-width: 100%;
-}
-#container #homepage #services{
-width: 100%;
-flex-direction: column;
-/* align-items: center; */
-}
-/* #container #homepage #services article{
-width: 100%;
-} */
-#container #homepage #services article p{
-width: 100%;
-}
-#container #homepage .last{
-width: 100%;
-display: flex;
-flex-direction: column;
-margin: 10px;
-}
-#container #homepage .last .three_quarter .rr{
-width: 100%;
-display: flex;
-flex-direction: column;
-}
-.row3{
-width: 100%;
-display: flex;
-}
-#footer{
-width: 100%;
-justify-content: space-between;
-}
-}
