--- a/Javascript/JS Arrays/Array Methods/length_method.html
+++ b/Javascript/JS Arrays/Array Methods/length_method.html
@@ -7,21 +7,21 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="demo"></div>
-    <button onclick="addValue()">Add a Value</button>
-
+    <div id="demo"></div> 
+        <button onclick="addValue()">Add a Value</button>
 <script>
     var results = ""
 
     var technologies = ["HTML", "Css", "Java Script", "React"]
     function addValue() {
-        technologies.join()
+        technologies[technologies.length]=("Node JS")
         technologies.forEach((val) => {
             results += val + "<br>"
         })
         console.log(technologies)
         document.getElementById("demo").innerHTML = results
     }
+    
 
 </script>
 </body>
