--- a/Javascript/JS Arrays/Array Methods/reverse_method.html
+++ b/Javascript/JS Arrays/Array Methods/reverse_method.html
@@ -15,7 +15,7 @@
 
     var technologies = ["HTML", "Css", "Java Script", "React"]
     function addValue() {
-        technologies.join()
+        technologies.reverse()
         technologies.forEach((val) => {
             results += val + "<br>"
         })
