--- a/Novomber11 2021/basic-83/index.html
+++ b/Novomber11 2021/basic-83/index.html
@@ -5,21 +5,59 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="styles/layout.css" type="text/css">
 <!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+  @media only screen and (max-width: 1024px){
+    *{
+      box-sizing: border-box;
+    }
+    #header{display: flex;flex-direction: column;width:100%;}
+    #header{padding:10px 0;}
+    #header #hgroup{display: flex;flex-direction: column;align-items: center;}
+    #header form{padding: 5px;}
+    #header form fieldset{display: flex;justify-content: center;}
+    #header nav ul{width: 100%;display: flex;flex-direction: column;align-items: center;}
+    #header nav ul li{border: 1px solid white;width: 100%;display: flex;justify-content: center;padding: 3px;}
+    #container #slider img{width:100%; height:280px;}
+    #container #homepage #services {display: flex;flex-direction: column;align-items: center;}
+    .one_quarter{border:1px solid red;width:100%}
+    
+  }
+   @media only screen and (min-width: 1024px){
+     *{
+       box-sizing: border-box;
+     }
+    #header, #container, #footer{display:block; width:960px; margin:0 auto;}
+    #header #myown{display: flex;}
+    #header #hgroup{ margin:0 0 20px 0;}
+    #header form{margin:20px 0; padding:0 0 0 500px;}
+    #header form fieldset{display: flex;}
+    #header form input{display:block; width:200px; margin:0; padding:5px; color:#C0BAB6; background-color:#232323; border:1px solid #666666;}
+    #header form #sf_submit{display:block;width:70px; font-size:12px; font-weight:bold; text-transform:uppercase; color:#FFFFFF; background-color:#FF9900; border:none; cursor:pointer;}
+    #header nav ul{display: flex;justify-content: center;}
+    #header nav li{ margin-right:25px; text-transform:uppercase;}
+    #container #homepage #services {display: flex;}
+    one_quarter, .two_quarter, .three_quarter, .four_quarter{display:block;  margin:0 20px 0 0;}
+
+   }
+</style>
 </head>
 <body>
 <div class="wrapper row1">
   <header id="header" class="clear">
-    <div id="hgroup">
-      <h1><a href="#">Basic 83</a></h1>
-      <h2>Free HTML5 Website Template</h2>
+    <div id="myown">
+      <div id="hgroup">
+        <h1><a href="#">Basic 83</a></h1>
+        <h2>Free HTML5 Website Template</h2>
+      </div>
+      <form action="#" method="post">
+        <fieldset>
+          <legend>Search:</legend>
+          <input type="text" value="Search Our Website&hellip;" onFocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;">
+          <input type="submit" id="sf_submit" value="submit">
+        </fieldset>
+      </form>
     </div>
-    <form action="#" method="post">
-      <fieldset>
-        <legend>Search:</legend>
-        <input type="text" value="Search Our Website&hellip;" onFocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;">
-        <input type="submit" id="sf_submit" value="submit">
-      </fieldset>
-    </form>
     <nav>
       <ul>
         <li><a href="#">Text Link</a></li>
@@ -65,35 +103,11 @@
           <p class="more"><a href="#">Read More &raquo;</a></p>
         </article>
       </section>
-      <!-- / services area -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <section class="last clear">
-        <article class="three_quarter">
-          <h2>Lorum ipsum dolor</h2>
-          <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
-          <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit <a href="https://www.os-templates.com/">free website templates</a>.</p>
-          <footer class="more"><a href="#">Read More &raquo;</a></footer>
-        </article>
-        <article class="one_quarter lastbox">
-          <h2>Lorum ipsum dolor</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper pellentesque. Quisque non luctus sem.</p>
-          <footer class="more"><a href="#">Read More &raquo;</a></footer>
-        </article>
-      </section>
-      <!-- / Two Third -->
-    </div>
-    <!-- / content body -->
-  </div>
-</div>
-<!-- Footer -->
-<div class="wrapper row3">
-  <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-  </footer>
-</div>
+      <div class="wrapper row3">
+        <footer id="footer" class="clear">
+          <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
+          <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+        </footer>
+      </div>
 </body>
 </html>
