--- a/javascript/Array/sample4.html
+++ b/javascript/Array/sample4.html
@@ -9,19 +9,19 @@
     <style>
         #main {
             width: 300px;
-            height: 500px;
+            height: 650px;
             margin: 0px auto;
             border: 5px solid goldenrod;
             display: grid;
-            grid-template-columns: 100%;
-            grid-template-rows: 300px 30px;
+            grid-template-columns: 50% 50%;
+            grid-template-rows: 250px 30px 100px 100px;
 
 
         }
 
         #demo {
             grid-row: 2/3;
-            grid-column: 1/2;
+            grid-column: 1/3;
             width: 100%;
             display: grid;
             grid-template-columns: 250px 50px;
@@ -45,6 +45,10 @@
             align-self: center;
             align-items: center;
             justify-items: center;
+        }
+        #disply-evens {
+            grid-row: 1/2;
+            grid-column: 2/3;
         }
     </style>
 </head>
