Adding DOM Content

--- a/HTML/basic-83/index.html
+++ b/HTML/basic-83/index.html
@@ -25,12 +25,8 @@
             </div>
             
             <nav>
-                <ul>
-                    <li><a href="#">Comics</a></li>
-                    <li><a href="#">Movies</a></li>
-                    <li><a href="#">Director</a></li>
-                    <li><a href="#">Procucer</a></li>
-                    <li><a href="#">Actors</a></li>
+                <ul id="demo">
+                    
                 </ul>
             </nav>
         </header>
@@ -131,6 +127,7 @@
         </div>
 
     </footer> -->
+    <script src="./basic-83.js"></script>
 </body>
 
 </html>
