--- a/Assignments/Assignment_Dynamic/T83_spaceX.html
+++ b/Assignments/Assignment_Dynamic/T83_spaceX.html
@@ -11,8 +11,8 @@
     <div class="wrapper row1">
         <header id="header" class="clear">
             <div id="hgroup">
-                <h1><a href="#">SpaceX</a></h1>
-                <h2>AeroSpace Company</h2>
+                <!-- <h1><a href="#">SpaceX</a></h1>
+                <h2>AeroSpace Company</h2> -->
             </div>
             <form action="#" method="post">
                 <fieldset>
@@ -23,12 +23,8 @@
                 </fieldset>
             </form>
             <nav>
-                <ul>
-                    <li><a href="#">Falcon</a></li>
-                    <li><a href="#">Dragon</a></li>
-                    <li><a href="#">Starship</a></li>
-                    <li><a href="#">Rideshare</a></li>
-                    <li class="last"><a href="#">Human Spacelight</a></li>
+                <ul id="demo">
+                   
                 </ul>
             </nav>
         </header>
@@ -89,6 +85,7 @@
                     title="Free Website Templates">OS Templates</a></p>
         </footer>
     </div>
+    <script src="./spaceX_style.js"></script>
 </body>
 
 </html>
