--- a/Assignments/Assignment_Dynamic/T-83/T83_spaceX.html
+++ b/Assignments/Assignment_Dynamic/T-83/T83_spaceX.html
@@ -24,6 +24,11 @@
             </form>
             <nav>
                 <ul id="demo">
+                     <!-- <li><a href="#">Falcon</a></li>
+                    <li><a href="#">Dragon</a></li>
+                    <li><a href="#">Starship</a></li>
+                    <li><a href="#">Rideshare</a></li>
+                    <li class="last"><a href="#">Human Spacelight</a></li> -->
                    
                 </ul>
             </nav>
@@ -31,7 +36,8 @@
     </div>
     <div class="wrapper row2">
         <div id="container" class="clear">
-            <section id="slider"><a href="#"><img src="./images/spaceX.jpg" alt=""></a></section>
+            <section id="slider"><a href="#">
+                <img src="./images/spaceX.jpg" alt="" id="myBanner"></a></section>
             <div id="homepage">
                 <section id="services" class="clear">
                     <article class="one_quarter">
